--- a/tasks/week_5_tasks/Task_CNN_Scratch.ipynb
+++ b/tasks/week_5_tasks/Task_CNN_Scratch.ipynb
@@ -317,7 +317,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "f255fac3"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f255fac3",
+        "outputId": "3a0b77d2-c715-443c-a1f9-6c0d4882cbd1"
       },
       "source": [
         "# Create the raw data extraction directory if it doesn't exist\n",
@@ -361,8 +365,21 @@
         "else:\n",
         "    print(\"No raw image files found. Check ZIP_PATH and extraction process.\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Extracting /content/drive/MyDrive/Dataset/Dataset Sistem Presensi Wajah V1.0.zip to /content/raw_dataset...\n",
+            "Extraction complete.\n",
+            "Contents of /content/raw_dataset after extraction: ['Dataset Sistem Presensi Wajah V1.0']\n",
+            "Actual root directory for raw images: /content/raw_dataset/Dataset Sistem Presensi Wajah V1.0\n",
+            "Found 0 raw image files.\n",
+            "No raw image files found. Check ZIP_PATH and extraction process.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
