--- a/tasks/week_5_tasks/Task_CNN_Scratch.ipynb
+++ b/tasks/week_5_tasks/Task_CNN_Scratch.ipynb
@@ -541,7 +541,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0f824f70"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0f824f70",
+        "outputId": "712c6574-85f5-46bc-b5af-17c99d153dab"
       },
       "source": [
         "def process_and_save_faces(raw_data_root_dir, processed_train_dir, processed_test_dir, detector, img_width, img_height, split_ratio=0.8):\n",
@@ -695,8 +699,20 @@
         "else:\n",
         "    print(\"Error: ACTUAL_RAW_DATA_ROOT is not set or does not exist. Cannot run processing pipeline.\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Starting face detection and cropping pipeline from /content/raw_dataset/Dataset Sistem Presensi Wajah V1.0...\n",
+            "\n",
+            "Face detection and cropping pipeline finished.\n",
+            "Total images processed and saved: 0\n",
+            "Total images skipped (no face detected or error): 0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -712,7 +728,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "455ac6d0"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "455ac6d0",
+        "outputId": "911c023a-ff5f-4bcd-bd47-763f75513368"
       },
       "source": [
         "# Function to count images in a directory, including subdirectories\n",
@@ -738,8 +758,18 @@
         "else:\n",
         "    print(\"Processed dataset structure verified.\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Number of processed images in training directory (/content/processed_dataset/train): 0\n",
+            "Number of processed images in testing directory (/content/processed_dataset/test): 0\n",
+            "Warning: No processed images found in one or both directories. Check the processing pipeline and file paths.\n"
+          ]
+        }
+      ]
     }
   ]
 }
