--- a/tasks/week_5_tasks/Task_CNN_Scratch.ipynb
+++ b/tasks/week_5_tasks/Task_CNN_Scratch.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMnkOQJ/4aHZoJKIbFakd+8",
+      "authorship_tag": "ABX9TyNilL0+by+5B4fl8jsIeZmE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -770,6 +770,100 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1a50af8b"
+      },
+      "source": [
+        "## **Section 3: Data Loading and Augmentation (Pemuatan dan Augmentasi Data)**\n",
+        "\n",
+        "**Penjelasan:** Sekarang kita akan bekerja dengan data yang sudah bersih di PROCESSED_PATH. Karena datanya sudah memiliki struktur folder per kelas (berkat pipeline preprocessing di Section 2), kita bisa menggunakan `ImageDataGenerator` dan metode `flow_from_directory` yang lebih efisien untuk memuat data dan menerapkan augmentasi secara on-the-fly."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "84a0f6c7"
+      },
+      "source": [
+        "### **3.1. Create Data Generators (Membuat Generator Data)**\n",
+        "\n",
+        "**Penjelasan:** Menginisialisasi `ImageDataGenerator` untuk data training dengan berbagai teknik augmentasi untuk meningkatkan variasi data dan membantu mencegah overfitting. Satu generator terpisah dibuat untuk data testing yang hanya melakukan rescaling."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0748205b"
+      },
+      "source": [
+        "# Create ImageDataGenerator for training with augmentation\n",
+        "train_datagen = ImageDataGenerator(\n",
+        "    rescale=1./255,             # Rescale pixel values to [0, 1]\n",
+        "    rotation_range=20,          # Randomly rotate images by up to 20 degrees\n",
+        "    width_shift_range=0.2,      # Randomly shift image horizontally\n",
+        "    height_shift_range=0.2,     # Randomly shift image vertically\n",
+        "    shear_range=0.2,            # Apply shear transformation\n",
+        "    zoom_range=0.2,             # Apply random zoom\n",
+        "    horizontal_flip=True,       # Randomly flip images horizontally\n",
+        "    fill_mode='nearest'         # Fill pixels lost during transformations\n",
+        ")\n",
+        "\n",
+        "# Create ImageDataGenerator for testing (only rescaling)\n",
+        "test_datagen = ImageDataGenerator(rescale=1./255) # Only rescale for consistency"
+      ],
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "98a53f4c"
+      },
+      "source": [
+        "### **3.2. Apply the Generators (Menerapkan Generator)**\n",
+        "\n",
+        "**Penjelasan:** Menggunakan metode `flow_from_directory` dari generator yang telah dibuat untuk membaca gambar langsung dari struktur folder di PROCESSED_PATH/train dan PROCESSED_PATH/test. Ini secara otomatis akan menentukan label kelas berdasarkan nama sub-folder."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1bd307cc"
+      },
+      "source": [
+        "# Create training data generator\n",
+        "train_generator = train_datagen.flow_from_directory(\n",
+        "    os.path.join(PROCESSED_PATH, 'train'),\n",
+        "    target_size=(IMG_WIDTH, IMG_HEIGHT), # Target size for input images\n",
+        "    batch_size=BATCH_SIZE,\n",
+        "    color_mode='rgb',\n",
+        "    class_mode='categorical' # For multi-class classification\n",
+        ")\n",
+        "\n",
+        "# Create testing data generator\n",
+        "test_generator = test_datagen.flow_from_directory(\n",
+        "    os.path.join(PROCESSED_PATH, 'test'),\n",
+        "    target_size=(IMG_WIDTH, IMG_HEIGHT),\n",
+        "    batch_size=BATCH_SIZE,\n",
+        "    color_mode='rgb',\n",
+        "    class_mode='categorical',\n",
+        "    shuffle=False # Keep data in order for evaluation metrics\n",
+        ")\n",
+        "\n",
+        "# Get the number of classes from the training generator\n",
+        "NUM_CLASSES = train_generator.num_classes\n",
+        "print(f\"\\nNumber of classes (detected from directories): {NUM_CLASSES}\")\n",
+        "print(f\"Class indices: {train_generator.class_indices}\")\n",
+        "\n",
+        "# You can also store the class names if needed\n",
+        "CLASS_NAMES_GENERATOR = list(train_generator.class_indices.keys())\n",
+        "print(f\"Class names (order corresponds to indices): {CLASS_NAMES_GENERATOR}\")"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
