--- a/tasks/week_5_tasks/Task_CNN_Scratch.ipynb
+++ b/tasks/week_5_tasks/Task_CNN_Scratch.ipynb
@@ -831,7 +831,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1bd307cc"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1bd307cc",
+        "outputId": "e5c285cc-e481-447f-e1ef-6fcd22ac1bc5"
       },
       "source": [
         "# Create training data generator\n",
@@ -862,8 +866,21 @@
         "CLASS_NAMES_GENERATOR = list(train_generator.class_indices.keys())\n",
         "print(f\"Class names (order corresponds to indices): {CLASS_NAMES_GENERATOR}\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Found 0 images belonging to 0 classes.\n",
+            "Found 0 images belonging to 0 classes.\n",
+            "\n",
+            "Number of classes (detected from directories): 0\n",
+            "Class indices: {}\n",
+            "Class names (order corresponds to indices): []\n"
+          ]
+        }
+      ]
     }
   ]
 }
